@@ -1,7 +1,6 @@
 package greencity.service;
 
 import greencity.achievement.AchievementCalculation;
-import greencity.constant.EmailNotificationMessagesConstants;
 import greencity.constant.ErrorMessage;
 import greencity.dto.PageableDto;
 import greencity.dto.econews.EcoNewsVO;
@@ -25,7 +24,6 @@ import greencity.enums.Role;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.UserHasNoPermissionToAccessException;
-import greencity.message.GeneralEmailMessage;
 import greencity.rating.RatingCalculation;
 import greencity.repository.EcoNewsCommentRepo;
 import greencity.repository.EcoNewsRepo;
@@ -38,7 +36,6 @@ import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -55,97 +52,53 @@ public class EcoNewsCommentServiceImpl implements EcoNewsCommentService {
     private final NotificationService notificationService;
 
     /**
-     * Method to save {@link greencity.entity.EcoNewsComment}.
-     *
-     * @param econewsId                   id of {@link EcoNews} to which we save
-     *                                    comment.
-     * @param addEcoNewsCommentDtoRequest dto with {@link EcoNewsComment} text,
-     *                                    parentCommentId.
-     * @param userVO                      {@link User} that saves the comment.
-     * @return {@link AddEcoNewsCommentDtoResponse} instance.
+     * {@inheritDoc}
      */
     @Override
     @Transactional
-    public AddEcoNewsCommentDtoResponse save(Long econewsId, AddEcoNewsCommentDtoRequest addEcoNewsCommentDtoRequest,
+    public AddEcoNewsCommentDtoResponse save(Long ecoNewsId, AddEcoNewsCommentDtoRequest addEcoNewsCommentDtoRequest,
         UserVO userVO) {
-        EcoNewsVO ecoNewsVO = ecoNewsService.findById(econewsId);
+        EcoNewsVO ecoNewsVO = ecoNewsService.findById(ecoNewsId);
         EcoNewsComment ecoNewsComment = modelMapper.map(addEcoNewsCommentDtoRequest, EcoNewsComment.class);
         User user = modelMapper.map(userVO, User.class);
         ecoNewsComment.setUser(user);
         ecoNewsComment.setEcoNews(modelMapper.map(ecoNewsVO, EcoNews.class));
         if (addEcoNewsCommentDtoRequest.getParentCommentId() != 0) {
             EcoNewsComment parentComment =
-                ecoNewsCommentRepo.findById(addEcoNewsCommentDtoRequest.getParentCommentId()).orElseThrow(
-                    () -> new BadRequestException(ErrorMessage.COMMENT_NOT_FOUND_EXCEPTION));
+                ecoNewsCommentRepo.findById(addEcoNewsCommentDtoRequest.getParentCommentId())
+                    .orElseThrow(() -> new BadRequestException(ErrorMessage.COMMENT_NOT_FOUND_EXCEPTION));
             if (parentComment.getParentComment() == null) {
                 ecoNewsComment.setParentComment(parentComment);
-                notificationService.sendEmailNotification(GeneralEmailMessage.builder()
-                    .email(parentComment.getUser().getEmail())
-                    .subject(EmailNotificationMessagesConstants.REPLY_SUBJECT)
-                    .message(String.format(EmailNotificationMessagesConstants.REPLY_MESSAGE,
-                        ecoNewsComment.getUser().getName()))
-                    .build());
                 userNotificationService.createNotification(modelMapper.map(parentComment.getUser(), UserVO.class),
                     userVO, NotificationType.ECONEWS_COMMENT_REPLY, parentComment.getId(), parentComment.getText(),
-                    econewsId, ecoNewsVO.getTitle());
+                    ecoNewsId, ecoNewsVO.getTitle());
             } else {
                 throw new BadRequestException(ErrorMessage.CANNOT_REPLY_THE_REPLY);
             }
         }
         achievementCalculation
-            .calculateAchievement(userVO,
-                AchievementCategoryType.COMMENT_OR_REPLY, AchievementAction.ASSIGN);
+            .calculateAchievement(userVO, AchievementCategoryType.COMMENT_OR_REPLY, AchievementAction.ASSIGN);
         ratingCalculation.ratingCalculation(RatingCalculationEnum.COMMENT_OR_REPLY, userVO);
         ecoNewsComment.setStatus(CommentStatus.ORIGINAL);
-        notificationService.sendEmailNotification(GeneralEmailMessage.builder()
-            .email(ecoNewsVO.getAuthor().getEmail())
-            .subject(EmailNotificationMessagesConstants.ECONEWS_COMMENTED_SUBJECT)
-            .message(String.format(EmailNotificationMessagesConstants.ECONEWS_COMMENTED_MESSAGE, ecoNewsVO.getTitle()))
-            .build());
         userNotificationService.createNotification(ecoNewsVO.getAuthor(), userVO, NotificationType.ECONEWS_COMMENT,
-            econewsId, ecoNewsVO.getTitle());
+            ecoNewsId, ecoNewsVO.getTitle());
         return modelMapper.map(ecoNewsCommentRepo.save(ecoNewsComment), AddEcoNewsCommentDtoResponse.class);
     }
 
     /**
-     * Method returns all comments to certain ecoNews specified by ecoNewsId.
-     *
-     * @param userVO    current {@link User}
-     * @param ecoNewsId specifies {@link EcoNews} to which we search for comments
-     * @return all comments to certain ecoNews specified by ecoNewsId.
+     * {@inheritDoc}
      */
     @Override
-    public PageableDto<EcoNewsCommentDto> findAllComments(Pageable pageable, UserVO userVO, Long ecoNewsId) {
-        ecoNewsService.findById(ecoNewsId);
-        Page<EcoNewsComment> pages = ecoNewsCommentRepo.findAllByParentCommentIsNullAndEcoNewsIdOrderByCreatedDateDesc(
-            pageable, ecoNewsId);
-        List<EcoNewsCommentDto> ecoNewsCommentDtos = convertToEcoNewsCommentDtos(pages, userVO).stream()
-            .map(this::setRepliesToComment)
-            .toList();
-
-        return new PageableDto<>(
-            ecoNewsCommentDtos,
-            pages.getTotalElements(),
-            pages.getPageable().getPageNumber(),
-            pages.getTotalPages());
-    }
-
-    /**
-     * Method returns all replies to certain comment specified by parentCommentId.
-     *
-     * @param parentCommentId specifies {@link EcoNewsComment} to which we search
-     *                        for replies
-     * @param userVO          current {@link User}
-     * @return all replies to certain comment specified by parentCommentId.
-     */
-    @Override
-    public PageableDto<EcoNewsCommentDto> findAllReplies(Pageable pageable, Long parentCommentId, UserVO userVO) {
+    public PageableDto<EcoNewsCommentDto> findAllReplies(Pageable pageable, Long ecoNewsId, Long parentCommentId,
+        List<CommentStatus> statuses, UserVO userVO) {
         Page<EcoNewsComment> pages = ecoNewsCommentRepo
-            .findAllByParentCommentIdOrderByCreatedDateDesc(pageable, parentCommentId);
-        if (pages.isEmpty()) {
-            throw new NotFoundException(ErrorMessage.COMMENT_NOT_FOUND_BY_PARENT_COMMENT_ID);
+            .findAllByParentCommentIdAndStatusInOrderByCreatedDateDesc(pageable, parentCommentId, statuses);
+        if (pages.isEmpty()
+            || pages.get().findFirst().filter(c -> c.getEcoNews().getId().equals(ecoNewsId)).isEmpty()) {
+            throw new NotFoundException(ErrorMessage.COMMENT_NOT_FOUND_EXCEPTION);
         }
-        List<EcoNewsCommentDto> ecoNewsCommentDtos = convertToEcoNewsCommentDtos(pages, userVO);
+        UserVO user = userVO == null ? UserVO.builder().build() : userVO;
+        List<EcoNewsCommentDto> ecoNewsCommentDtos = convertToEcoNewsCommentDtos(pages, user);
 
         return new PageableDto<>(
             ecoNewsCommentDtos,
@@ -155,14 +108,12 @@ public class EcoNewsCommentServiceImpl implements EcoNewsCommentService {
     }
 
     /**
-     * Method to mark {@link EcoNewsComment} specified by id as deleted.
-     *
-     * @param id     of {@link EcoNewsComment} to delete.
-     * @param userVO current {@link User} that wants to delete.
+     * {@inheritDoc}
      */
     @Override
-    public void deleteById(Long id, UserVO userVO) {
-        EcoNewsComment comment = ecoNewsCommentRepo.findById(id)
+    public void deleteById(Long ecoNewsId, Long commentId, UserVO userVO) {
+        EcoNewsComment comment = ecoNewsCommentRepo.findById(commentId)
+            .filter(c -> c.getEcoNews().getId().equals(ecoNewsId))
             .orElseThrow(() -> new NotFoundException(ErrorMessage.COMMENT_NOT_FOUND_EXCEPTION));
 
         if (userVO.getRole() != Role.ROLE_ADMIN && !userVO.getId().equals(comment.getUser().getId())) {
@@ -179,16 +130,13 @@ public class EcoNewsCommentServiceImpl implements EcoNewsCommentService {
     }
 
     /**
-     * Method to change the existing {@link EcoNewsComment}.
-     *
-     * @param text   new text of {@link EcoNewsComment}.
-     * @param id     to specify {@link EcoNewsComment} that user wants to change.
-     * @param userVO current {@link User} that wants to change.
+     * {@inheritDoc}
      */
     @Override
     @Transactional
-    public void update(String text, Long id, UserVO userVO) {
+    public void update(Long ecoNewsId, String text, Long id, UserVO userVO) {
         EcoNewsComment comment = ecoNewsCommentRepo.findById(id)
+            .filter(c -> c.getEcoNews().getId().equals(ecoNewsId))
             .orElseThrow(() -> new NotFoundException(ErrorMessage.COMMENT_NOT_FOUND_EXCEPTION));
         if (!userVO.getId().equals(comment.getUser().getId())) {
             throw new BadRequestException(ErrorMessage.NOT_A_CURRENT_USER);
@@ -199,14 +147,12 @@ public class EcoNewsCommentServiceImpl implements EcoNewsCommentService {
     }
 
     /**
-     * Method to like or dislike {@link EcoNewsComment} specified by id.
-     *
-     * @param id     of {@link EcoNewsComment} to like/dislike.
-     * @param userVO current {@link User} that wants to like/dislike.
+     * {@inheritDoc}
      */
     @Override
-    public void like(Long id, UserVO userVO) {
-        EcoNewsComment comment = ecoNewsCommentRepo.findById(id)
+    public void like(Long ecoNewsId, Long commentId, UserVO userVO) {
+        EcoNewsComment comment = ecoNewsCommentRepo.findById(commentId)
+            .filter(c -> c.getEcoNews().getId().equals(ecoNewsId))
             .orElseThrow(() -> new NotFoundException(ErrorMessage.COMMENT_NOT_FOUND_EXCEPTION));
         EcoNewsCommentVO ecoNewsCommentVO = modelMapper.map(comment, EcoNewsCommentVO.class);
         if (comment.getUsersLiked().stream()
@@ -219,11 +165,6 @@ public class EcoNewsCommentServiceImpl implements EcoNewsCommentService {
                 throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
             }
             ecoNewsService.likeComment(userVO, ecoNewsCommentVO);
-            notificationService.sendEmailNotification(GeneralEmailMessage.builder()
-                .email(comment.getUser().getEmail())
-                .subject(EmailNotificationMessagesConstants.COMMENT_LIKE_SUBJECT)
-                .message(String.format(EmailNotificationMessagesConstants.COMMENT_LIKE_MESSAGE, userVO.getName()))
-                .build());
             EcoNews ecoNews = comment.getEcoNews();
             userNotificationService.createNotification(modelMapper.map(comment.getUser(), UserVO.class), userVO,
                 NotificationType.ECONEWS_COMMENT_LIKE, comment.getId(), comment.getText(),
@@ -233,17 +174,15 @@ public class EcoNewsCommentServiceImpl implements EcoNewsCommentService {
     }
 
     /**
-     * Method returns count of likes to certain {@link EcoNewsComment} specified by
-     * id.
-     *
-     * @param amountCommentLikesDto dto with id and count likes for comments.
+     * {@inheritDoc}
      */
     @Override
     @Transactional
     public void countLikes(AmountCommentLikesDto amountCommentLikesDto) {
-        EcoNewsComment comment = ecoNewsCommentRepo.findById(amountCommentLikesDto.getId()).orElseThrow(
-            () -> new BadRequestException(ErrorMessage.COMMENT_NOT_FOUND_EXCEPTION));
-        boolean isLiked = comment.getUsersLiked().stream().map(User::getId)
+        EcoNewsComment comment = ecoNewsCommentRepo.findById(amountCommentLikesDto.getId())
+            .orElseThrow(() -> new BadRequestException(ErrorMessage.COMMENT_NOT_FOUND_EXCEPTION));
+        boolean isLiked = comment.getUsersLiked().stream()
+            .map(User::getId)
             .anyMatch(x -> x.equals(amountCommentLikesDto.getUserId()));
         amountCommentLikesDto.setLiked(isLiked);
         int size = comment.getUsersLiked().size();
@@ -253,46 +192,34 @@ public class EcoNewsCommentServiceImpl implements EcoNewsCommentService {
     }
 
     /**
-     * Method to count replies to certain {@link EcoNewsComment}.
-     *
-     * @param id specifies parent comment to all replies
-     * @return amount of replies
+     * {@inheritDoc}
      */
     @Override
-    public int countReplies(Long id) {
-        if (ecoNewsCommentRepo.findById(id).isEmpty()) {
-            throw new NotFoundException(ErrorMessage.COMMENT_NOT_FOUND_EXCEPTION);
-        }
-        return ecoNewsCommentRepo.countByParentCommentId(id);
+    public int countReplies(Long ecoNewsId, Long commentId) {
+        EcoNewsComment ecoNewsComment = ecoNewsCommentRepo.findById(commentId)
+            .filter(c -> c.getEcoNews().getId().equals(ecoNewsId))
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.COMMENT_NOT_FOUND_EXCEPTION));
+        return ecoNewsCommentRepo.countByParentCommentId(ecoNewsComment.getId());
     }
 
     /**
-     * Method to count not deleted comments to certain {@link EcoNews}.
-     *
-     * @param ecoNewsId to specify {@link EcoNews}
-     * @return amount of comments
+     * {@inheritDoc}
      */
     @Override
     public int countOfComments(Long ecoNewsId) {
         EcoNews ecoNews = ecoNewsRepo.findById(ecoNewsId)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.ECO_NEWS_NOT_FOUND_BY_ID + ecoNewsId));
-
         return ecoNewsCommentRepo.countEcoNewsCommentByEcoNews(ecoNews.getId());
     }
 
     /**
-     * Method to get all active comments to {@link EcoNews} specified by ecoNewsId.
-     *
-     * @param pageable  page of news.
-     * @param ecoNewsId specifies {@link EcoNews} to which we search for comments
-     * @return all active comments to certain ecoNews specified by ecoNewsId.
-     * @author Taras Dovganyuk
+     * {@inheritDoc}
      */
     @Override
-    public PageableDto<EcoNewsCommentDto> getAllActiveComments(Pageable pageable, UserVO userVO, Long ecoNewsId) {
+    public PageableDto<EcoNewsCommentDto> findAllComments(Pageable pageable, UserVO userVO, Long ecoNewsId,
+        List<CommentStatus> statuses) {
         Page<EcoNewsComment> pages = ecoNewsCommentRepo
-            .findAllByParentCommentIsNullAndEcoNewsIdAndStatusNotOrderByCreatedDateDesc(pageable, ecoNewsId,
-                CommentStatus.DELETED);
+            .findAllByEcoNewsIdAndParentCommentIsNullAndStatusInOrderByCreatedDateDesc(pageable, ecoNewsId, statuses);
         UserVO user = userVO == null ? UserVO.builder().build() : userVO;
         List<EcoNewsCommentDto> ecoNewsCommentDtos = convertToEcoNewsCommentDtos(pages, user).stream()
             .map(this::setRepliesToComment)
@@ -310,33 +237,6 @@ public class EcoNewsCommentServiceImpl implements EcoNewsCommentService {
         return comment;
     }
 
-    /**
-     * Method returns all replies to certain comment specified by parentCommentId.
-     *
-     * @param parentCommentId specifies {@link EcoNewsComment} to which we search
-     *                        for replies
-     * @param userVO          current {@link User}
-     * @return all replies to certain comment specified by parentCommentId.
-     * @author Taras Dovganyuk
-     */
-    @Override
-    public PageableDto<EcoNewsCommentDto> findAllActiveReplies(Pageable pageable, Long parentCommentId, UserVO userVO) {
-        Page<EcoNewsComment> pages = ecoNewsCommentRepo
-            .findAllByParentCommentIdAndStatusNotOrderByCreatedDateDesc(pageable, parentCommentId,
-                CommentStatus.DELETED);
-        if (pages.isEmpty()) {
-            throw new NotFoundException(ErrorMessage.COMMENT_NOT_FOUND_BY_PARENT_COMMENT_ID);
-        }
-        UserVO user = userVO == null ? UserVO.builder().build() : userVO;
-        List<EcoNewsCommentDto> ecoNewsCommentDtos = convertToEcoNewsCommentDtos(pages, user);
-
-        return new PageableDto<>(
-            ecoNewsCommentDtos,
-            pages.getTotalElements(),
-            pages.getPageable().getPageNumber(),
-            pages.getTotalPages());
-    }
-
     private List<EcoNewsCommentDto> convertToEcoNewsCommentDtos(Page<EcoNewsComment> pages, UserVO user) {
         return pages.stream()
             .map(comment -> setCurrentUserLikedToComment(comment, user))
@@ -351,25 +251,16 @@ public class EcoNewsCommentServiceImpl implements EcoNewsCommentService {
     }
 
     /**
-     * Method that allow you to search users by name. The search results will be
-     * limited to the first 10 entries, and the list will decrease as the search
-     * query is refined.
-     *
-     * @param searchUsers dto with current user ID and search query
-     *                    {@link UserSearchDto}.
-     *
-     * @author Anton Bondar
+     * {@inheritDoc}
      */
     @Override
-    @Transactional
+    @Transactional(readOnly = true)
     public void searchUsers(UserSearchDto searchUsers) {
-        List<User> users = searchUsers.getSearchQuery() == null ? userRepo.findAll()
-            : userRepo.searchUsers(searchUsers.getSearchQuery());
+        List<User> users = userRepo.searchUsers(searchUsers.getSearchQuery());
 
         List<UserTagDto> usersToTag = users.stream()
             .map(u -> modelMapper.map(u, UserTagDto.class))
-            .limit(10)
-            .collect(Collectors.toList());
+            .toList();
 
         messagingTemplate.convertAndSend("/topic/" + searchUsers.getCurrentUserId() + "/searchUsers", usersToTag);
     }
